--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<div class="ctverec">
+	<div class="box">
 
 		<img class="eliska" src="images/foto.jpg" alt="Eliška Veselá">
 
