--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 		<p>Pracuje jako programátorka a učí neuronové sítě rozpoznávat obličeje a předměty. Vystudovala ČVUT v Praze a v 26 letech založila startup, kterým dnes úspěšně válcuje velké americké firmy.</p>
 
 		<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
-		<a class="button1" href="https://twitter.com/">Twitter</a>
-		<a class="button2" href="https://www.facebook.com/">Facebook</a>
+		<box class="social-icons">
+			<a class="button1" href="https://twitter.com/">Twitter</a>
+			<a class="button2" href="https://www.facebook.com/">Facebook</a>
+		</box>
 	</div>
 
 </body>
